--- a/demo.html
+++ b/demo.html
@@ -11,22 +11,22 @@
     // that we have compiled.
     //
     // Note that the `default` import is an initialization function which
-    // will "boot" the module and make it ready to use. Currently browsers
+    // will "boot" the module and make it ready to use. Currently, browsers
     // don't support natively imported WebAssembly as an ES module, but
     // eventually the manual initialization won't be required!
-    // import { search, default as init } from './tinysearch_engine.js';
     import { search, default as init } from './tinysearch_engine.js';
+
     window.search = search;
 
     async function run() {
-      // First up we need to actually load the wasm file, so we use the
-      // default export to inform it where the wasm file is located on the
-      // server, and then we wait on the returned promise to wait for the
-      // wasm to be loaded.
+      // First up we need to actually load the WASM file, so we use the
+      // default export to inform the script where the WASM file is located on
+      // the server. Then we await the returned promise to wait for the
+      // WASM content to be loaded.
       //
       // Note that instead of a string here you can also pass in an instance
       // of `WebAssembly.Module` which allows you to compile your own module.
-      // Also note that the promise, when resolved, yields the wasm module's
+      // Also note that the promise, when resolved, yields the WASM module's
       // exports which is the same as importing the `*_bg` module in other
       // modes
       await init('./tinysearch_engine_bg.wasm');
@@ -36,11 +36,12 @@
   </script>
 
   <script>
-    // And afterwards we can use all the functionality defined in wasm.
+    // Afterwards we can use all the functionality defined in WASM.
     function doSearch() {
       let value = document.getElementById("demo").value;
       console.log(`Search query: ${value}`);
 
+      // Retrieve 5 results
       const results = search(value, 5);
 
       console.log(`Results: ${results}`);
